Improve crs support
