# openapi/ogcapi.yaml
@@ -5,7 +5,9 @@ info:
   license:
     name: CC-BY 4.0 license
     url: "https://creativecommons.org/licenses/by/4.0/"
-  description: This is an OpenAPI definition of various OGC API specifications as well as the SpatioTemporal Asset Catalog API specification.
+  description: |-
+    This is an OpenAPI definition of various OGC API specifications as well as
+    the SpatioTemporal Asset Catalog (STAC) API specification.
   contact:
     name: Balthasar Teuscher
     email: balthasar.teuscher@gmail.com
@@ -14,9 +16,6 @@ tags:
     description: essential characteristics of this API
   - name: Data
     description: access to data (features)
-servers:
-  - url: "http://192.168.1.225:8484"
-    description: Local server
 paths:
   /:
     get:
@@ -256,7 +255,7 @@ components:
           type: string
           default: feature
         crs:
-          description: the list of coordinate reference systems supported by the service
+          description: the list of CRS identifiers supported by the service
           type: array
           items:
             type: string
@@ -265,6 +264,22 @@ components:
           example:
             - http://www.opengis.net/def/crs/OGC/1.3/CRS84
             - http://www.opengis.net/def/crs/EPSG/0/4326
+        storageCrs:
+          description: |-
+            the CRS identifier, from the list of supported CRS identifiers, 
+            that may be used to retrieve features from a collection without the
+            need to apply a CRS transformation
+          type: string
+          format: uri
+        storageCrsCoordinateEpoch:
+          description: |-
+            point in time at which coordinates in the spatial feature 
+            collection are referenced to the dynamic coordinate reference 
+            system in `storageCrs`, that may be used to retrieve features from 
+            a collection without the need to apply a change of coordinate 
+            epoch. It is expressed as a decimal year in the Gregorian calendar
+          type: number
+          example: '2017-03-25 in the Gregorian calendar is epoch 2017.23'
     collections:
       type: object
       required:
